/**
 *
 * @author FJML1983
 */
public class Pato extends Animal {
    int plumas;
    
    void graznar(){
        System.out.println("CUAC CUAC");
    }
}
